--- a/index.html
+++ b/index.html
@@ -64,10 +64,19 @@
                     <div id="add-task" class="my-day">
                         <span><img src = "img/add.svg"/></span>
                         <span class="left-side-menu"><input type="text" id="new-list" placeholder="New List" /></span>
+                        <span class="left-side-menu"><img class="create-group-img" src="img/add-folder.svg"></span>
                     </div>
                 </div>
                 <div id="sub-task-body" class="sub-task-body">
-                    <input type="text" id="task-name-on-sub-task" class="task-name-on-sub-task" value="Tasks"/></span>
+                    <div class="middle-heading">
+                        <input type="text" id="task-name-on-sub-task" class="task-name-on-sub-task" value="Tasks"/>
+                        <div class="middle-heading-share">
+                            <span><img src="img/add-user.svg"></span>
+                            <span class="Share">Share</span>
+                            <span><img src="img/sort.svg"></span>
+                            <span class="Share" >Sort</span>
+                        </div>
+                    </div>
                     <div id = "sub-task">
                     </div>
                     <div id="enter-sub-task" class="enter-sub-task">
@@ -79,15 +88,50 @@
                     <div class="background-lines"></div>
                 </div>
                 <div id="step-body" class="step-body">
-                    <span id="sub-task-name" class="sub-task-name">
-                        <input type="text" id="sub-task-name-on-step" class="sub-task-name-on-step"/></span>
-                    <div id="step-name">
+                    <div class="step-div">
+                        <span id="sub-task-name" class="sub-task-name">
+                            <input type="text" id="sub-task-name-on-step" class="sub-task-name-on-step"/></span>
+                        <div id="step-name">
+                        </div>
+                        <div id="step-query" class="step-query">
+                            <span><img src = "img/add.svg"/></span>
+                            <span><input type="text" id="enter-step" class="step-input" placeholder="Add Step"/></span>
+                        </div>
+                        <div class="background-lines"></div>
                     </div>
-                    <div id="step-query" class="step-query">
-                        <span><img src = "img/add.svg"/></span>
-                        <span><input type="text" id="enter-step" class="step-input" placeholder="Add Step"/></span>
+                    <div class="step-div">
+                        <div id="step-query" class="step-menu-query">
+                            <span><img class="step-menu-img" src = "img/brightness.svg"/></span>
+                            <span class="step-menu">Add to My Day</span>
+                        </div>
                     </div>
-                    <div class="background-lines"></div>
+                    <div class="step-div">
+                        <div id="step-query" class="step-menu-query">
+                            <span><img class="step-menu-img" src = "img/ring-bell-clock.svg"/></span>
+                            <span class="step-menu">Remind me</span>
+                        </div>
+                        <div class="background-lines"></div>
+                        <div id="step-query" class="step-menu-query">
+                            <span><img class="step-menu-img" src = "img/calendar-1.svg"/></span>
+                            <span class="step-menu">Add due date</span>
+                        </div>
+                        <div class="background-lines"></div>
+                        <div id="step-query" class="step-menu-query">
+                            <span><img class="step-menu-img" src = "img/event.svg"/></span>
+                            <span class="step-menu">Repeat</span>
+                        </div>
+                    </div>
+                    <div class="step-div">
+                        <div id="step-query" class="step-menu-query">
+                            <span><img class="step-menu-img" src = "img/clip.svg"/></span>
+                            <span class="step-menu">Add file</span>
+                        </div>
+                    </div>
+                    <div class="step-div">
+                        <div id="step-query" class="step-note">
+                            <span class="step-menu">Add note</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
