up to javascript completed in todo list

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 <span class="left-side-menu">Tasks</span>
                             </div>
                         </li>
-                        <div id="new-created-list">
+                        <div id="new-created-list" class="new-created-list">
                         </div>
                     </ul>
                     <div id="add-task" class="my-day">
@@ -89,8 +89,10 @@
                 </div>
                 <div id="step-body" class="step-body">
                     <div class="step-div">
+                        <span class="check-box"><img id="check-box"/></span>
                         <span id="sub-task-name" class="sub-task-name">
-                            <input type="text" id="sub-task-name-on-step" class="sub-task-name-on-step"/></span>
+                            <input type="text" id="sub-task-name-on-step" class="sub-task-name-on-step"/>
+                        </span>
                         <div id="step-name">
                         </div>
                         <div id="step-query" class="step-query">
