--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
                 </div>
             </div>
         </div>
+        <script type="text/javascript" src="js/jquery-3.4.1.js"></script>
         <script type="text/javascript" src="js/to-do.js"></script>
     </body>
 </html>
