jquery completed style applied

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <img src = "img/menu-of-three-lines.svg"/>
                         </button>
                     </div>
-                    <ul id="list-menu">
+                    <ul id="list-menu" class="list-menu">
                         <li>
                             <div class="my-day">
                                 <span><img src = "img/brightness.svg"/></span>
@@ -70,7 +70,7 @@
                 <div id="sub-task-body" class="sub-task-body">
                     <div class="middle-heading">
                         <input type="text" id="task-name-on-sub-task" class="task-name-on-sub-task" value="Tasks"/>
-                        <div class="middle-heading-share">
+                        <div id="middle-heading-share" class="share-and-sort middle-heading-share-increase">
                             <span><img src="img/add-user.svg"></span>
                             <span class="Share">Share</span>
                             <span><img src="img/sort.svg"></span>
